Refactor HTML structure and styling for povrce.html

--- a/povrce.html
+++ b/povrce.html
@@ -260,7 +260,7 @@
 
     <div class="product-card">
       <div class="product-img">
-        <img src="paprika.jpg" alt="Paprika">
+        <img src="Paprika.jpg" alt="Paprika">
       </div>
       <div class="product-info">
         <h3 class="product-title">Paprika</h3>
@@ -270,7 +270,7 @@
 
     <div class="product-card">
       <div class="product-img">
-        <img src="paradajz.jpg" alt="Paradajz">
+        <img src="Paradajz.jpg" alt="Paradajz">
       </div>
       <div class="product-info">
         <h3 class="product-title">Paradajz</h3>
@@ -356,4 +356,5 @@
     <h3 class="product-title">Rotkvice</h3>
     <a href="#" class="btn">Pogledaj proizvođače</a>
   </div>
+
 </div>
