--- a/prijava-prodavca.html
+++ b/prijava-prodavca.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prijava Prodavca</title>
+    <title>Localni Plodovi</title>
 </head>
 <body>
     <h1>Prijava Prodavca</h1>
-    <form action="your-action-url" method="post">
+    <form action="/submit_form" method="post">
         <label for="name">Ime:</label>
-        <input type="text" id="name" name="name" required><br><br>
+        <input type="text" id="name" name="name" required>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        <label for="product">Proizvod:</label>
-        <input type="text" id="product" name="product" required><br><br>
+        <input type="email" id="email" name="email" required>
         <input type="submit" value="Prijavi se">
     </form>
+    <!-- Other content -->
 </body>
 </html>
