--- a/prijava-prodavca.html
+++ b/prijava-prodavca.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Localni Plodovi</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Prijava Prodavca</h1>
-    <form action="/submit_form" method="post">
-        <label for="name">Ime:</label>
-        <input type="text" id="name" name="name" required>
+    <form action="/submit" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <input type="submit" value="Prijavi se">
+        <input type="email" id="email" name="email">
+        <input type="submit" value="Submit">
     </form>
-    <!-- Other content -->
+    
+    <p>Some additional content here.</p>
 </body>
 </html>
