Fix form in prijava-prodavca.html by adding quotes around action URL and removing duplicate form tag.

--- a/prijava-prodavca.html
+++ b/prijava-prodavca.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prijava Prodavca</title>
 </head>
 <body>
-    <form action="/submit" method="post">
+    <form action="https://example.com" method="post">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
+        <input type="text" id="name" name="name" required>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" required>
         <input type="submit" value="Submit">
     </form>
-    
-    <p>Some additional content here.</p>
+    <!-- This is the duplicate form that needs to be removed -->
+    <input type="submit" value="Submit Again">
 </body>
 </html>
