--- a/prijava-prodavca.html
+++ b/prijava-prodavca.html
@@ -194,7 +194,7 @@
 <div class="container">
 
   <h1>Registracija prodavca</h1>
-  <form id="registration-form" action=https://script.google.com/macros/s/AKfycbyuMDrHuEpO53kc2cDkqOY_jBhTVajWnABUrTRam5-RGdwSc3NXvDKUfvY288PnL9yp2A/exec method="POST >
+  <form id="registration-form" action="https://script.google.com/macros/s/AKfycbyuMDrHuEpO53kc2cDkqOY_jBhTVajWnABUrTRam5-RGdwSc3NXvDKUfvY288PnL9yp2A/exec" method="POST">
     <div class="form-group">
       <label for="ime">Ime i prezime / Naziv domaćinstva <span style="color:red;">*</span></label>
       <input type="text" id="ime" name="ime" required>
@@ -314,4 +314,5 @@
 </script>
 
 </body>
+
 </html>
