--- a/povrce.html
+++ b/povrce.html
@@ -260,7 +260,7 @@
 
     <div class="product-card">
       <div class="product-img">
-        <img src="Paprika.jpg" alt="Paprika">
+        <img src="paprika.jpg" alt="Paprika">
       </div>
       <div class="product-info">
         <h3 class="product-title">Paprika</h3>
@@ -270,7 +270,7 @@
 
     <div class="product-card">
       <div class="product-img">
-        <img src="Paradajz.jpg" alt="Paradajz">
+        <img src="paradajz.jpg" alt="Paradajz">
       </div>
       <div class="product-info">
         <h3 class="product-title">Paradajz</h3>
@@ -358,3 +358,4 @@
   </div>
 
 </div>
+
