--- a/prijava-prodavca.html
+++ b/prijava-prodavca.html
@@ -230,43 +230,53 @@
       <input type="url" name="instagram" placeholder="Instagram link" style="margin-top:0.8rem;">
     </div>
 
+<!-- Nova lokacija (slobodan unos) -->
 <div class="form-group">
-  <label>Niše koje prodajete <span style="color:red;">*</span></label>
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 0.8rem; margin-top: 0.5rem;">
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Povrće" required> Povrće
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Voće"> Voće
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Mlečni proizvodi"> Mlečni proizvodi
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Meso i mesne prerađevine"> Meso i mesne prerađevine
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Med i pčelinji proizvodi"> Med i pčelinji proizvodi
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Jaja"> Jaja
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Bilje i zdravlje"> Bilje i zdravlje
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Žitarice"> Žitarice
-    </label>
-    <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
-      <input type="checkbox" name="nise" value="Gotova jela"> Gotova jela
-    </label>
-  </div>
+  <label for="lokacija">Lokacija (grad, selo, okolina...) <span style="color:red;">*</span></label>
+  <input type="text" id="lokacija" name="lokacija" placeholder="npr. Kragujevac, selo Banovo Polje, okolina Mačve..." required>
 </div>
 
-<!-- Dodaj polje za lokaciju (npr. iznad niša) -->
+<!-- Niše – kvadratići (checkbox-ovi) -->
 <div class="form-group">
-  <label for="lokacija">Lokacija (grad/selo, okolina) <span style="color:red;">*</span></label>
-  <input type="text" id="lokacija" name="lokacija" placeholder="npr. Selo Banovo Polje, okolina Mačve" required>
+  <label>Niše koje prodajete <span style="color:red;">*</span></label>
+  <div class="checkbox-group" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 0.8rem; margin-top: 0.5rem;">
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Povrće</span>
+      <input type="checkbox" name="nise" value="Povrće">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Voće</span>
+      <input type="checkbox" name="nise" value="Voće">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Mlečni proizvodi</span>
+      <input type="checkbox" name="nise" value="Mlečni proizvodi">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Meso i mesne prerađevine</span>
+      <input type="checkbox" name="nise" value="Meso i mesne prerađevine">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Med i pčelinji proizvodi</span>
+      <input type="checkbox" name="nise" value="Med i pčelinji proizvodi">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Jaja</span>
+      <input type="checkbox" name="nise" value="Jaja">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Bilje i zdravlje</span>
+      <input type="checkbox" name="nise" value="Bilje i zdravlje">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Žitarice</span>
+      <input type="checkbox" name="nise" value="Žitarice">
+    </label>
+    <label style="display: flex; justify-content: space-between; align-items: center; background: #f8f9f5; padding: 0.8rem; border-radius: 8px; cursor: pointer;">
+      <span>Gotova jela</span>
+      <input type="checkbox" name="nise" value="Gotova jela">
+    </label>
+  </div>
 </div>
 
     <div class="form-group">
@@ -340,6 +350,7 @@
 </body>
 
 </html>
+
 
 
 
