--- a/index.html
+++ b/index.html
@@ -156,16 +156,53 @@
 <body>
 
 <header>
-  <nav>
-    <div class="logo">LokalniPlodovi</div>
-    <ul>
-      <li><a href="#">Početna</a></li>
-      <li><a href="#">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
-      <a href="login.html" class="btn-login"><i class="fas fa-sign-in-alt"></i> Prijavi se</a>
-      <a href="prijava-prodavca.html" class="btn-login"><i class="fas fa-sign-in-alt"></i> Postani prodavac</a>
-    </ul>
-  </nav>
+<nav>
+  <div class="logo">LokalniPlodovi</div>
+  <ul>
+    <li><a href="index.html">Početna</a></li>
+    <li><a href="prodavci.html">Svi prodavci</a></li>
+    <li><a href="#">Mapa</a></li>
+    <li><a href="#">Chat</a></li>
+
+    <!-- Ovo se pokazuje SAMO ako je korisnik ulogovan -->
+    <li id="moj-profil-li" style="display:none;">
+      <a href="moj-profil.html">Moj profil</a>
+    </li>
+    <li id="odjavi-se-li" style="display:none;">
+      <a href="#" onclick="odjaviSe()">Odjavi se</a>
+    </li>
+
+    <!-- Ovo se pokazuje SAMO ako NIJE ulogovan -->
+    <li id="prijavi-se-li">
+      <a href="prijava.html">Prijavi se</a>
+    </li>
+    <li id="postani-prodavac-li">
+      <a href="registracija-prodavca.html">Postani prodavac</a>
+    </li>
+  </ul>
+</nav>
+
+<script>
+  // Proveri da li je korisnik ulogovan
+  const korisnik = localStorage.getItem('trenutniKorisnik');
+
+  if (korisnik) {
+    document.getElementById('moj-profil-li').style.display = 'block';
+    document.getElementById('odjavi-se-li').style.display = 'block';
+    document.getElementById('prijavi-se-li').style.display = 'none';
+    document.getElementById('postani-prodavac-li').style.display = 'none';
+  } else {
+    document.getElementById('moj-profil-li').style.display = 'none';
+    document.getElementById('odjavi-se-li').style.display = 'none';
+    document.getElementById('prijavi-se-li').style.display = 'block';
+    document.getElementById('postani-prodavac-li').style.display = 'block';
+  }
+
+  function odjaviSe() {
+    localStorage.removeItem('trenutniKorisnik');
+    window.location.href = 'index.html';
+  }
+</script>
 </header>
 
 <div class="container">
@@ -257,4 +294,5 @@
 </footer>
 
 </body>
+
 </html>
