--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     <!-- Ovo se pokazuje SAMO ako NIJE ulogovan -->
     <li id="prijavi-se-li">
-      <a href="prijava.html">Prijavi se</a>
+      <a href="login.html">Prijavi se</a>
     </li>
     <li id="postani-prodavac-li">
       <a href="registracija-prodavca.html">Postani prodavac</a>
@@ -296,3 +296,4 @@
 </body>
 
 </html>
+
