--- a/voce.html
+++ b/voce.html
@@ -201,7 +201,7 @@
 
       <!-- Prikazuje se SAMO ako NIJE ulogovan -->
       <li id="prijavi-se-li">
-        <a href="prijava.html">Prijavi se</a>
+        <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
         <a href="registracija-prodavca.html">Postani prodavac</a>
@@ -398,4 +398,5 @@
 </body>
 
 </html>
+
 
