--- a/voce.html
+++ b/voce.html
@@ -187,7 +187,7 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="login.html">Svi prodavci</a></li>
+      <li><a href="prodavci.html">Svi prodavci</a></li>
       <li><a href="#">Mapa</a></li>
       <li><a href="#">Chat</a></li>
 
@@ -398,5 +398,6 @@
 </body>
 
 </html>
+
 
 
