--- a/voce.html
+++ b/voce.html
@@ -232,6 +232,28 @@
   }
 </script>
 
+<script>
+  // Proveri da li je korisnik ulogovan
+  const korisnik = localStorage.getItem('trenutniKorisnik');
+
+  if (korisnik) {
+    document.getElementById('moj-profil-li').style.display = 'list-item';
+    document.getElementById('odjavi-se-li').style.display = 'list-item';
+    document.getElementById('prijavi-se-li').style.display = 'none';
+    document.getElementById('postani-prodavac-li').style.display = 'none';
+  } else {
+    document.getElementById('moj-profil-li').style.display = 'none';
+    document.getElementById('odjavi-se-li').style.display = 'none';
+    document.getElementById('prijavi-se-li').style.display = 'list-item';
+    document.getElementById('postani-prodavac-li').style.display = 'list-item';
+  }
+
+  function odjaviSe() {
+    localStorage.removeItem('trenutniKorisnik');
+    window.location.href = 'index.html';
+  }
+</script>
+
 <div class="container">
 
   <h1>Voće direktno sa imanja</h1>
@@ -398,6 +420,7 @@
 </body>
 
 </html>
+
 
 
 
