--- a/zdravlje.html
+++ b/zdravlje.html
@@ -114,7 +114,7 @@
 
       <!-- Prikazuje se SAMO ako NIJE ulogovan -->
       <li id="prijavi-se-li">
-        <a href="prijava.html">Prijavi se</a>
+        <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
         <a href="registracija-prodavca.html">Postani prodavac</a>
@@ -169,3 +169,4 @@
 </body>
 
 </html>
+
