--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <div class="logo">LokalniPlodovi</div>
   <ul>
     <li><a href="index.html">Početna</a></li>
-    <li><a href="prodavci.html">Svi prodavci</a></li>
+    <li><a href="Prodavci.html">Svi prodavci</a></li>
     <li><a href="#">Mapa</a></li>
     <li><a href="#">Chat</a></li>
 
@@ -296,4 +296,5 @@
 </body>
 
 </html>
+
 
