--- a/med.html
+++ b/med.html
@@ -177,7 +177,7 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
       <li><a href="#">Mapa</a></li>
       <li><a href="#">Chat</a></li>
 
@@ -328,3 +328,4 @@
 </body>
 
 </html>
+
