--- a/login.html
+++ b/login.html
@@ -151,7 +151,7 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
       <li><a href="#">Mapa</a></li>
       <li><a href="#">Chat</a></li>
 
@@ -231,3 +231,4 @@
 </body>
 
 </html>
+
