--- a/povrce.html
+++ b/povrce.html
@@ -5,7 +5,7 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
       <li><a href="#">Mapa</a></li>
       <li><a href="#">Chat</a></li>
 
@@ -395,5 +395,6 @@
   </div>
 
 </div>
+
 
 
