--- a/mapa.html
+++ b/mapa.html
@@ -14,32 +14,36 @@
   </style>
 </head>
 <body>
+<header>
+  <nav>
+    <div class="logo">LokalniPlodovi</div>
+    <ul>
+      <li><a href="index.html">Početna</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
+      <li><a href="mapa.html">Mapa</a></li>
+      <li><a href="chat.html">Chat</a></li>
 
-<nav>
-  <div class="logo">LokalniPlodovi</div>
-  <ul>
-    <li><a href="index.html">Početna</a></li>
-    <li><a href="prodavci.html">Svi prodavci</a></li>
-    <li><a href="#">Mapa</a></li>
-    <li><a href="#">Chat</a></li>
+      <!-- Prikazuje se SAMO ako je ulogovan -->
+      <li id="moj-profil-li" style="display:none;">
+        <a href="moj-profil.html">Moj profil</a>
+      </li>
+      <li id="odjavi-se-li" style="display:none;">
+        <a href="#" onclick="odjaviSe(); return false;">Odjavi se</a>
+      </li>
 
-    <li id="moj-profil-li" style="display:none;">
-      <a href="moj-profil.html">Moj profil</a>
-    </li>
-    <li id="odjavi-se-li" style="display:none;">
-      <a href="#" onclick="odjaviSe()">Odjavi se</a>
-    </li>
-
-    <li id="prijavi-se-li">
-      <a href="login.html">Prijavi se</a>
-    </li>
-    <li id="postani-prodavac-li">
-      <a href="registracija-prodavca.html">Postani prodavac</a>
-    </li>
-  </ul>
-</nav>
+      <!-- Prikazuje se SAMO ako NIJE ulogovan -->
+      <li id="prijavi-se-li">
+        <a href="login.html">Prijavi se</a>
+      </li>
+      <li id="postani-prodavac-li">
+        <a href="registracija-prodavca.html">Postani prodavac</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 
 <script>
+  // Proveri da li je korisnik ulogovan
   const korisnik = localStorage.getItem('trenutniKorisnik');
 
   if (korisnik) {
@@ -55,10 +59,14 @@
   }
 
   function odjaviSe() {
-    localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
+    if (confirm("Da li želite da se odjavite?")) {
+      localStorage.removeItem('trenutniKorisnik');
+      window.location.href = 'index.html';
+    }
   }
 </script>
+
+ 
 
 <div id="map"></div>
 
