--- a/mapa.html
+++ b/mapa.html
@@ -4,22 +4,92 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mapa prodavaca – LokalniPlodovi</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
-    body { margin:0; padding:0; font-family: 'Segoe UI', sans-serif; }
-    #map { height: 100vh; }
-    .header { background: #2e7d32; color: white; padding: 1rem; text-align: center; }
-    .header a { color: white; margin: 0 1rem; text-decoration: none; }
+    :root {
+      --zelena: #2e7d32;
+      --zelena-svetla: #4caf50;
+      --zemlja: #5d4037;
+      --siva: #757575;
+      --svetlo: #f8f9f5;
+      --belo: #ffffff;
+    }
+
+    * { margin:0; padding:0; box-sizing:border-box; }
+
+    body {
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      background: var(--svetlo);
+      color: #333;
+      line-height: 1.6;
+      min-height: 100vh;
+    }
+
+    header {
+      background: rgba(46, 125, 50, 0.94);
+      color: white;
+      padding: 1rem 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      width: 100%;
+    }
+
+    .logo { font-size: 1.8rem; font-weight: 700; }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1400px;
+      margin: 0 auto;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 2.5rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      transition: 0.2s;
+    }
+
+    nav a:hover { color: #c8e6c9; }
+
+    .container {
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 0;
+    }
+
+    #map {
+      height: calc(100vh - 80px); /* oduzmi visinu header-a */
+    }
+
+    footer {
+      background: var(--zemlja);
+      color: white;
+      text-align: center;
+      padding: 4rem 1rem 2.5rem;
+      margin-top: 0;
+    }
   </style>
 </head>
 <body>
+
 <header>
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
+      <li><a href="prodavci.html">Svi prodavci</a></li>
       <li><a href="mapa.html">Mapa</a></li>
       <li><a href="chat.html">Chat</a></li>
 
@@ -28,7 +98,7 @@
         <a href="moj-profil.html">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
-        <a href="#" onclick="odjaviSe(); return false;">Odjavi se</a>
+        <a href="#" onclick="odjaviSe()">Odjavi se</a>
       </li>
 
       <!-- Prikazuje se SAMO ako NIJE ulogovan -->
@@ -36,16 +106,27 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
-      </li>
+        <a href="registracija-prodavca.html">Postani prodavac</a></li>
     </ul>
   </nav>
 </header>
 
-<script>
-  // Proveri da li je korisnik ulogovan
-  const korisnik = localStorage.getItem('trenutniKorisnik');
+<div class="container">
+  <div id="map"></div>
+</div>
 
+<footer>
+  <div class="container">
+    <h2>LokalniPlodovi</h2>
+    <p>Prirodno • Sezonski • Direktno sa imanja Srbije</p>
+    <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
+  </div>
+</footer>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=TVOJ_GOOGLE_API_KEY" async defer></script>
+<script>
+  // Proveri da li je korisnik ulogovan (isti kod kao na drugim stranicama)
+  const korisnik = localStorage.getItem('trenutniKorisnik');
   if (korisnik) {
     document.getElementById('moj-profil-li').style.display = 'list-item';
     document.getElementById('odjavi-se-li').style.display = 'list-item';
@@ -59,67 +140,77 @@
   }
 
   function odjaviSe() {
-    if (confirm("Da li želite da se odjavite?")) {
-      localStorage.removeItem('trenutniKorisnik');
-      window.location.href = 'index.html';
-    }
+    localStorage.removeItem('trenutniKorisnik');
+    window.location.href = 'index.html';
   }
-</script>
 
- 
+  // Inicijalizuj Google Mapu
+  function initMap() {
+    const mapOptions = {
+      center: { lat: 44.0165, lng: 21.0059 }, // Centar Srbije
+      zoom: 8,
+      mapTypeId: 'satellite' // Satelitski prikaz
+    };
 
-<div id="map"></div>
+    const map = new google.maps.Map(document.getElementById("map"), mapOptions);
 
-<script>
-  // Kreiraj mapu – centriraj na Srbiju
-  var map = L.map('map').setView([44.0165, 21.0059], 8); // centar Srbije, zoom 8
+    // Ograniči na Srbiju (bounds)
+    const srbijaBounds = new google.maps.LatLngBounds(
+      new google.maps.LatLng(41.85, 18.9), // Jugozapad
+      new google.maps.LatLng(46.2, 23.0) // Severoistok
+    );
 
-  // Dodaj OpenStreetMap sloj (besplatno)
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-  }).addTo(map);
+    map.fitBounds(srbijaBounds);
+    map.setOptions({ restriction: { latLngBounds: srbijaBounds, strictBounds: false } });
 
-  // Ograniči zoom i oblast (samo Srbija)
-  map.setMinZoom(7);
-  map.setMaxBounds([
-    [40.8, 18.1], // jugozapad
-    [46.2, 23.0]  // severoistok
-  ]);
+    // Dodaj markere (pinovi)
+    const prodavci = [
+      {
+        ime: "Pčelarstvo Jovanović",
+        lokacija: "Selo Banovo Polje, okolina Mačve",
+        lat: 44.85,
+        lng: 19.35,
+        link: "profil-pcelar.html"
+      },
+      {
+        ime: "Domaćinstvo Marković",
+        lokacija: "Stara Planina, okolina Pirota",
+        lat: 43.35,
+        lng: 22.58,
+        link: "profil-kajmak.html"
+      },
+      {
+        ime: "Mesara Petrović",
+        lokacija: "Zlatibor, okolina Čajetine",
+        lat: 43.71,
+        lng: 19.70,
+        link: "profil-meso.html"
+      }
+    ];
 
-  // Dodaj pinove za prodavce (možeš dodati više)
-  var prodavci = [
-    {
-      ime: "Pčelarstvo Jovanović",
-      lokacija: "Selo Banovo Polje, okolina Mačve",
-      lat: 44.85,
-      lng: 19.35,
-      link: "profil-pcelar.html"
-    },
-    {
-      ime: "Domaćinstvo Marković",
-      lokacija: "Stara Planina, okolina Pirota",
-      lat: 43.35,
-      lng: 22.58,
-      link: "profil-kajmak.html"
-    },
-    {
-      ime: "Mesara Petrović",
-      lokacija: "Zlatibor, okolina Čajetine",
-      lat: 43.71,
-      lng: 19.70,
-      link: "profil-meso.html"
-    }
-  ];
+    prodavci.forEach(p => {
+      const marker = new google.maps.Marker({
+        position: { lat: p.lat, lng: p.lng },
+        map: map,
+        title: p.ime
+      });
 
-  prodavci.forEach(p => {
-    L.marker([p.lat, p.lng])
-      .addTo(map)
-      .bindPopup(`
-        <b>${p.ime}</b><br>
-        ${p.lokacija}<br>
-        <a href="${p.link}">Pogledaj profil</a>
-      `);
-  });
+      const infoWindow = new google.maps.InfoWindow({
+        content: `
+          <h3>${p.ime}</h3>
+          <p>${p.lokacija}</p>
+          <a href="${p.link}">Pogledaj profil</a>
+        `
+      });
+
+      marker.addListener('click', () => {
+        infoWindow.open(map, marker);
+      });
+    });
+  }
+
+  // Pozovi initMap kada se API učita
+  window.initMap = initMap;
 </script>
 
 </body>
