--- a/mapa.html
+++ b/mapa.html
@@ -4,236 +4,86 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mapa prodavaca – LokalniPlodovi</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5gg7fNY5F0=" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
   <style>
-    :root {
-      --zelena: #2e7d32;
-      --zelena-svetla: #4caf50;
-      --zemlja: #5d4037;
-      --siva: #757575;
-      --svetlo: #f8f9f5;
-      --belo: #ffffff;
-    }
-
-    * { margin:0; padding:0; box-sizing:border-box; }
-
-    body {
-      font-family: 'Segoe UI', system-ui, sans-serif;
-      background: var(--svetlo);
-      color: #333;
-      line-height: 1.6;
-      min-height: 100vh;
-    }
-
-    header {
-      background: rgba(46, 125, 50, 0.94);
+    body { margin:0; padding:0; font-family: 'Segoe UI', sans-serif; background: #f8f9f5; }
+    #map { height: calc(100vh - 80px); }
+    .header {
+      background: #2e7d32;
       color: white;
-      padding: 1rem 2rem;
+      padding: 1rem;
+      text-align: center;
       position: sticky;
       top: 0;
       z-index: 1000;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      width: 100%;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
-
-    .logo { font-size: 1.8rem; font-weight: 700; }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    nav ul {
-      display: flex;
-      list-style: none;
-      gap: 2.5rem;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.2s;
-    }
-
-    nav a:hover { color: #c8e6c9; }
-
-    .container {
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 0;
-    }
-
-    #map {
-      height: calc(100vh - 80px); /* oduzmi visinu header-a */
-    }
-
-    footer {
-      background: var(--zemlja);
-      color: white;
-      text-align: center;
-      padding: 4rem 1rem 2.5rem;
-      margin-top: 0;
-    }
+    .header a { color: white; margin: 0 1rem; text-decoration: none; font-weight: 500; }
+    .header a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
-<header>
-  <nav>
-    <div class="logo">LokalniPlodovi</div>
-    <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
 
-      <!-- Prikazuje se SAMO ako je ulogovan -->
-      <li id="moj-profil-li" style="display:none;">
-        <a href="moj-profil.html">Moj profil</a>
-      </li>
-      <li id="odjavi-se-li" style="display:none;">
-        <a href="#" onclick="odjaviSe()">Odjavi se</a>
-      </li>
-
-      <!-- Prikazuje se SAMO ako NIJE ulogovan -->
-      <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
-      </li>
-      <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
-      </li>
-    </ul>
-  </nav>
-</header>
-
-<script>
-  // Proveri da li je korisnik ulogovan
-  const korisnik = localStorage.getItem('trenutniKorisnik');
-
-  if (korisnik) {
-    document.getElementById('moj-profil-li').style.display = 'list-item';
-    document.getElementById('odjavi-se-li').style.display = 'list-item';
-    document.getElementById('prijavi-se-li').style.display = 'none';
-    document.getElementById('postani-prodavac-li').style.display = 'none';
-  } else {
-    document.getElementById('moj-profil-li').style.display = 'none';
-    document.getElementById('odjavi-se-li').style.display = 'none';
-    document.getElementById('prijavi-se-li').style.display = 'list-item';
-    document.getElementById('postani-prodavac-li').style.display = 'list-item';
-  }
-
-  function odjaviSe() {
-    localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
-  }
-</script>
-
-
-<div class="container">
-  <div id="map"></div>
+<div class="header">
+  <h1>Mapa prodavaca</h1>
+  <a href="index.html">Početna</a>
+  <a href="prodavci.html">Svi prodavci</a>
+  <a href="registracija-prodavca.html">Postani prodavac</a>
 </div>
 
-<footer>
-  <div class="container">
-    <h2>LokalniPlodovi</h2>
-    <p>Prirodno • Sezonski • Direktno sa imanja Srbije</p>
-    <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
-  </div>
-</footer>
+<div id="map"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=TVOJ_GOOGLE_API_KEY" async defer></script>
 <script>
-  // Proveri da li je korisnik ulogovan (isti kod kao na drugim stranicama)
-  const korisnik = localStorage.getItem('trenutniKorisnik');
-  if (korisnik) {
-    document.getElementById('moj-profil-li').style.display = 'list-item';
-    document.getElementById('odjavi-se-li').style.display = 'list-item';
-    document.getElementById('prijavi-se-li').style.display = 'none';
-    document.getElementById('postani-prodavac-li').style.display = 'none';
-  } else {
-    document.getElementById('moj-profil-li').style.display = 'none';
-    document.getElementById('odjavi-se-li').style.display = 'none';
-    document.getElementById('prijavi-se-li').style.display = 'list-item';
-    document.getElementById('postani-prodavac-li').style.display = 'list-item';
-  }
+  // Kreiraj mapu – centar na Srbiju
+  var map = L.map('map').setView([44.0165, 21.0059], 8);
 
-  function odjaviSe() {
-    localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
-  }
+  // Satelitski sloj (Esri World Imagery – besplatno)
+  L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+    attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+  }).addTo(map);
 
-  // Inicijalizuj Google Mapu
-  function initMap() {
-    const mapOptions = {
-      center: { lat: 44.0165, lng: 21.0059 }, // Centar Srbije
-      zoom: 8,
-      mapTypeId: 'satellite' // Satelitski prikaz
-    };
+  // Ograniči na Srbiju
+  map.setMinZoom(7);
+  map.setMaxBounds([
+    [40.8, 18.1], // jugozapad
+    [46.2, 23.0]  // severoistok
+  ]);
 
-    const map = new google.maps.Map(document.getElementById("map"), mapOptions);
+  // Pinovi za prodavce
+  var prodavci = [
+    {
+      ime: "Pčelarstvo Jovanović",
+      lokacija: "Selo Banovo Polje, okolina Mačve",
+      lat: 44.85,
+      lng: 19.35,
+      link: "profil-pcelar.html"
+    },
+    {
+      ime: "Domaćinstvo Marković",
+      lokacija: "Stara Planina, okolina Pirota",
+      lat: 43.35,
+      lng: 22.58,
+      link: "profil-kajmak.html"
+    },
+    {
+      ime: "Mesara Petrović",
+      lokacija: "Zlatibor, okolina Čajetine",
+      lat: 43.71,
+      lng: 19.70,
+      link: "profil-meso.html"
+    }
+  ];
 
-    // Ograniči na Srbiju (bounds)
-    const srbijaBounds = new google.maps.LatLngBounds(
-      new google.maps.LatLng(41.85, 18.9), // Jugozapad
-      new google.maps.LatLng(46.2, 23.0) // Severoistok
-    );
-
-    map.fitBounds(srbijaBounds);
-    map.setOptions({ restriction: { latLngBounds: srbijaBounds, strictBounds: false } });
-
-    // Dodaj markere (pinovi)
-    const prodavci = [
-      {
-        ime: "Pčelarstvo Jovanović",
-        lokacija: "Selo Banovo Polje, okolina Mačve",
-        lat: 44.85,
-        lng: 19.35,
-        link: "profil-pcelar.html"
-      },
-      {
-        ime: "Domaćinstvo Marković",
-        lokacija: "Stara Planina, okolina Pirota",
-        lat: 43.35,
-        lng: 22.58,
-        link: "profil-kajmak.html"
-      },
-      {
-        ime: "Mesara Petrović",
-        lokacija: "Zlatibor, okolina Čajetine",
-        lat: 43.71,
-        lng: 19.70,
-        link: "profil-meso.html"
-      }
-    ];
-
-    prodavci.forEach(p => {
-      const marker = new google.maps.Marker({
-        position: { lat: p.lat, lng: p.lng },
-        map: map,
-        title: p.ime
-      });
-
-      const infoWindow = new google.maps.InfoWindow({
-        content: `
-          <h3>${p.ime}</h3>
-          <p>${p.lokacija}</p>
-          <a href="${p.link}">Pogledaj profil</a>
-        `
-      });
-
-      marker.addListener('click', () => {
-        infoWindow.open(map, marker);
-      });
-    });
-  }
-
-  // Pozovi initMap kada se API učita
-  window.initMap = initMap;
+  prodavci.forEach(p => {
+    L.marker([p.lat, p.lng])
+      .addTo(map)
+      .bindPopup(`
+        <b>${p.ime}</b><br>
+        ${p.lokacija}<br>
+        <a href="${p.link}">Pogledaj profil</a>
+      `);
+  });
 </script>
 
 </body>
