--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <a href="login.html">Prijavi se</a>
     </li>
     <li id="postani-prodavac-li">
-      <a href="registracija-prodavca.html">Postani prodavac</a>
+      <a href="prijava-prodavca.html">Postani prodavac</a>
     </li>
   </ul>
 </nav>
@@ -296,5 +296,6 @@
 </body>
 
 </html>
+
 
 
