--- a/povrce.html
+++ b/povrce.html
@@ -241,7 +241,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Blitva</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+       <a href="proizvodjaci/blitva.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -251,7 +251,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Cvekla</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+       <a href="proizvodjaci/cvekla.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -261,7 +261,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Crni i beli luk</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/luk.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -395,6 +395,7 @@
   </div>
 
 </div>
+
 
 
 
