--- a/povrce.html
+++ b/povrce.html
@@ -271,7 +271,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Krastavac</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+         <a href="proizvodjaci/krastavac.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -281,7 +281,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Krompir</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/krompir.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -291,7 +291,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kupus</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+       <a href="proizvodjaci/kupus.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -301,7 +301,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Paprika</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+         <a href="proizvodjaci/paprika.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -311,7 +311,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Paradajz</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+         <a href="proizvodjaci/paradajz.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -321,7 +321,7 @@
   </div>
   <div class="product-info">
     <h3 class="product-title">Patlidžan</h3>
-    <a href="#" class="btn">Pogledaj proizvođače</a>
+    <a href="proizvodjaci/patlidzan.html" class="btn">Pogledaj proizvođače</a>
   </div>
 </div>
 
@@ -331,7 +331,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Šargarepa</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+    <a href="proizvodjaci/sargarepa.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -341,7 +341,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Spanać</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+         <a href="proizvodjaci/spanac.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -351,7 +351,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Tikvice</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+         <a href="proizvodjaci/tikvice.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 <div class="product-card">
@@ -361,7 +361,7 @@
   
 <div class="product-info">
     <h3 class="product-title">Boranija</h3>
-    <a href="#" class="btn">Pogledaj proizvođače</a>
+ <a href="proizvodjaci/boranija.html" class="btn">Pogledaj proizvođače</a>
   </div>
 </div>
 
@@ -371,7 +371,7 @@
   </div>
   <div class="product-info">
     <h3 class="product-title">Grašak</h3>
-    <a href="#" class="btn">Pogledaj proizvođače</a>
+     <a href="proizvodjaci/grasak.html" class="btn">Pogledaj proizvođače</a>
   </div>
 </div>
 
@@ -381,7 +381,7 @@
   </div>
   <div class="product-info">
     <h3 class="product-title">Pasulj</h3>
-    <a href="#" class="btn">Pogledaj proizvođače</a>
+ <a href="proizvodjaci/pasulj.html" class="btn">Pogledaj proizvođače</a>
   </div>
 </div>
 
@@ -391,10 +391,11 @@
   </div>
   <div class="product-info">
     <h3 class="product-title">Rotkvice</h3>
-    <a href="#" class="btn">Pogledaj proizvođače</a>
+     <a href="proizvodjaci/rotkvice.html" class="btn">Pogledaj proizvođače</a>
   </div>
 
 </div>
+
 
 
 
