--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -90,10 +90,10 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="/index.html">Početna</a></li>
-      <li><a href="/prodavci.html">Svi prodavci</a></li>
-      <li><a href="/mapa">Mapa.html</a></li>
-      <li><a href="/chat">Chat</a></li>
+      <li><a href="index.html">Početna</a></li>
+      <li><a href="prodavci.html">Svi prodavci</a></li>
+      <li><a href="mapa">Mapa.html</a></li>
+      <li><a href="chat">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
         <a href="/moj-profil">Moj profil</a>
@@ -149,4 +149,5 @@
 
 </body>
 </html>
+
 
