--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -92,7 +92,7 @@
     <ul>
       <li><a href="index.html">Početna</a></li>
       <li><a href="prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa">Mapa.html</a></li>
+      <li><a href="mapa.html">Mapa</a></li>
       <li><a href="chat">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
@@ -149,5 +149,6 @@
 
 </body>
 </html>
+
 
 
