--- a/Prodavci.html
+++ b/Prodavci.html
@@ -183,7 +183,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="prijava-prodavca.html">Postani prodavac</a>
+        <a href="registracija-prodavca.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -276,4 +276,5 @@
 </body>
 
 </html>
+
 
