--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -231,4 +231,5 @@
 </body>
 
 </html>
+
 
