--- a/meso.html
+++ b/meso.html
@@ -194,7 +194,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -308,4 +308,5 @@
 </body>
 
 </html>
+
 
