--- a/mlecni.html
+++ b/mlecni.html
@@ -204,7 +204,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -318,4 +318,5 @@
 </body>
 
 </html>
+
 
