--- a/povrce.html
+++ b/povrce.html
@@ -22,7 +22,7 @@
         <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija-prodavca.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -395,6 +395,7 @@
   </div>
 
 </div>
+
 
 
 
