--- a/registracija.html
+++ b/registracija.html
@@ -172,7 +172,7 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
       <li><a href="mapa.html">Mapa</a></li>
       <li><a href="#">Chat</a></li>
 
@@ -300,3 +300,4 @@
 
 </body>
 </html>
+
