--- a/login.html
+++ b/login.html
@@ -215,7 +215,7 @@
   </form>
 
   <div class="register-link">
-    Nemaš nalog?<a href="prijava-prodavca.html" class="btn-login"><i class="fas fa-sign-in-alt"></i> postani prodavac</a>
+    Nemaš nalog?<a href="registracija.html" class="btn-login"><i class="fas fa-sign-in-alt"></i> postani prodavac</a>
   </div>
 
 </div>
@@ -231,5 +231,6 @@
 </body>
 
 </html>
+
 
 
