--- a/proizvodjaci/blitva.html
+++ b/proizvodjaci/blitva.html
@@ -91,22 +91,22 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="../index.html">Početna</a></li>
-      <li><a href="prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="chat">Chat</a></li>
+      <li><a href="../prodavci.html">Svi prodavci</a></li>
+      <li><a href="../mapa.html">Mapa</a></li>
+      <li><a href="chat">../Chat.html</a></li>
 
       <li id="moj-profil-li" style="display:none;">
-        <a href="/moj-profil">Moj profil</a>
+        <a href="../moj-profil">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
       </li>
 
       <li id="prijavi-se-li">
-        <a href="/login.html">Prijavi se</a>
+        <a href="../login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="/prijava-prodavca">Postani prodavac</a>
+        <a href="../registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -149,6 +149,7 @@
 
 </body>
 </html>
+
 
 
 
