--- a/voce.html
+++ b/voce.html
@@ -186,10 +186,10 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="#">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="../../index.html">Početna</a></li>
+      <li><a href="../../Prodavci.html">Svi prodavci</a></li>
+      <li><a href="../../mape.html">Mapa</a></li>
+      <li><a href="../../chat.html">Chat</a></li>
 
       <!-- Prikazuje se SAMO ako je ulogovan -->
       <li id="moj-profil-li" style="display:none;">
@@ -201,10 +201,10 @@
 
       <!-- Prikazuje se SAMO ako NIJE ulogovan -->
       <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
+        <a href="../../login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija.html">Postani prodavac</a>
+        <a href="../../registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -228,7 +228,7 @@
 
   function odjaviSe() {
     localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
+    window.location.href = '../../index.html';
   }
 </script>
 
@@ -271,7 +271,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Šljiva</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/sljiva.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -281,7 +281,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Jabuka</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/jabuka.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -291,7 +291,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Malina</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/malina.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -301,7 +301,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Jagoda</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/jagoda.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -311,7 +311,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Višnja</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/visnja.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -321,7 +321,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Grožđe</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/grozdje.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -331,7 +331,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Trešnje</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/tresnja.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -341,7 +341,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kajsija</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/kajsija.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -351,7 +351,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Breskva</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/breskva.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -361,7 +361,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kruška</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/kruska.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -371,7 +371,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Dunja</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/dunja.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -381,7 +381,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kupina</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/kupina.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -391,7 +391,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Borovnica</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/borovnica.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -401,7 +401,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Lubenica</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/voce/lubenica.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -420,6 +420,7 @@
 </body>
 
 </html>
+
 
 
 
